--- a/modules/Zim/style/Zim.css
+++ b/modules/Zim/style/Zim.css
@@ -18,9 +18,7 @@
 }
 
 #zim-block li {
-        /*border: 1px dotted #999;
-        border-width: 1px 0;*/
-        margin: 1px 0;
+	 margin: 1px 0;
 }
 
 #zim-block-head {
@@ -61,16 +59,37 @@
     vertical-align:middle; 
 }
 
+.zim-block-history-box {
+	min-width:600px;
+	min-height:450px;
+	border: 1px solid #D4D5D6;
+	background:#ffffff;
+	position:absolute; top:0px; left:0px;
+	-moz-border-radius-topleft:20px;
+    -moz-border-radius-topright:20spx;
+    -moz-border-radius-bottomleft:20px;
+    -moz-border-radius-bottomright:20spx;
+    border-top-left-radius:20px;
+    border-top-right-radius:20px;
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
+    -webkit-border-top-right-radius:20px;
+    -webkit-border-top-left-radius:20px;
+    -webkit-border-bottom-right-radius:20px;
+    -webkit-border-bottom-left-radius:20px;
+    margin:0 auto;
+}
+
 .zim-block p{
-font-size:14px;
-display:inline;
-vertical-align: middle;
+	font-size:14px;
+	display:inline;
+	vertical-align: middle;
 }
 .zim-block input{
-width:90%;
-margin-left:5%;
-margin-right:auto;
-border:1px solid #CAE2FC;
+	width:90%;
+	margin-left:5%;
+	margin-right:auto;
+	border:1px solid #CAE2FC;
 }
 
 .zim-settings {
@@ -111,10 +130,11 @@ border:1px solid #CAE2FC;
 }
 
 form.inplaceeditor-form input[type="text"] { /* Input box */
-width:50%;
-display:inline;
-margin:0;
+	width:50%;
+	display:inline;
+	margin:0;
 }
+
 form.inplaceeditor-form { /* The form */
     display:inline;
     padding:0;
