--- a/modules/Zim/style/Zim.css
+++ b/modules/Zim/style/Zim.css
@@ -25,7 +25,7 @@
     border-bottom:1px solid #D4D5D6;
 }
 
-#zim-block li:hover, #zim-message-header:hover {
+#zim-block li:hover, #zim-message-header:hover, #zim-block-history-box li:hover{
     background-color:#CAE2FC;
 }
 
