--- a/modules/Zim/style/Zim.css
+++ b/modules/Zim/style/Zim.css
@@ -27,39 +27,49 @@
     border-bottom:1px solid #D4D5D6;
 }
 
-#zim-block li:hover, #zim-message-header:hover, #zim-block-history-box li:hover{
+#zim-block li:hover, #zim-message-header:hover, #zim-block-history-box li:hover, .zim-settings li:hover{
     background-color:#CAE2FC;
+    cursor:pointer;
 }
 
-#zim-block-message-container {
-    position:fixed;
-    width:100%;
-    bottom:0px;
-    right:0px;
+.zim-block p, #zim-block-contacts div{
+	font-size:14px;
+	display:inline;
+	vertical-align: middle;
+}
+.zim-block input{
+	width:90%;
+	margin-left:5%;
+	margin-right:auto;
+	border:1px solid #CAE2FC;
 }
 
-#zim-block-message-container li{
-    background-color:white;
-    width:225px;
-    text-align:left;
-    float:right;
-    list-style-type:none;
-    vertical-align:middle;
-    display: block;
-    padding-left: 2px;
-    margin: 0 3px 0 0;
+.zim-settings {
     border: 1px solid #D4D5D6;
-    -moz-border-radius-topleft:5px;
+    background: white;
+    min-width: 250px;
+    min-height: 50px;
+    position: absolute;
+    right: 0;
+    top: 0;
     -moz-border-radius-topright:5px;
-    border-top-left-radius:5px;
     border-top-right-radius:5px;
     -webkit-border-top-right-radius:5px;
-    -webkit-border-top-left-radius:5px;
-    
 }
-#zim-block-message-container img, .status-img{
+
+form.inplaceeditor-form input[type="text"] { /* Input box */
+	width:50%;
+	display:inline;
+	margin:0;
+}
+
+form.inplaceeditor-form { /* The form */
+    display:inline;
+    padding:0;
     vertical-align:middle; 
+    margin:0;
 }
+/*END CSS FOR BLOCK*/
 
 /*CSS FOR ZIM BLOCK HISTORY*/
 .zim-block-history-box {
@@ -103,7 +113,7 @@
 	float:left;
 	text-align:left;
 }
-#zim-block-history-contacts ul {
+#zim-block-history-contacts ul, .zim-settings ul{
 	list-style:none;
 	width:100%;
 	margin:0;
@@ -138,30 +148,40 @@
 }
 /*END CSS FOR ZIM BLOCK HISTORY*/
 
-.zim-block p{
-	font-size:14px;
+/*CSS FOR ZIM MESSAGE WINDOWS*/
+#zim-block-message-container {
+    position:fixed;
+    width:100%;
+    bottom:0px;
+    right:0px;
+}
+.zim-message-contact-uname {
+	font-weight: bolder;
 	display:inline;
-	vertical-align: middle;
 }
-.zim-block input{
-	width:90%;
-	margin-left:5%;
-	margin-right:auto;
-	border:1px solid #CAE2FC;
-}
-
-.zim-settings {
+#zim-block-message-container li{
+    background-color:white;
+    width:225px;
+    text-align:left;
+    float:right;
+    list-style-type:none;
+    vertical-align:middle;
+    display: block;
+    padding-left: 2px;
+    margin: 0 3px 0 0;
     border: 1px solid #D4D5D6;
-    background: white;
-    min-width: 250px;
-    min-height: 50px;
-    position: absolute;
-    right: 0;
-    top: 0;
+    -moz-border-radius-topleft:5px;
     -moz-border-radius-topright:5px;
+    border-top-left-radius:5px;
     border-top-right-radius:5px;
     -webkit-border-top-right-radius:5px;
+    -webkit-border-top-left-radius:5px;
+    
 }
+#zim-block-message-container img, .status-img, #zim-block-contacts img{
+    vertical-align:middle; 
+}
+
 .zim-message-header{
     border-bottom: 1px solid #D4D5D6;
 }
@@ -187,18 +207,6 @@
     resize: none;
 }
 
-form.inplaceeditor-form input[type="text"] { /* Input box */
-	width:50%;
-	display:inline;
-	margin:0;
-}
-
-form.inplaceeditor-form { /* The form */
-    display:inline;
-    padding:0;
-    vertical-align:middle; 
-    margin:0;
-}
 
 .zim-message-message {
     position:absolute;
@@ -212,10 +220,14 @@ form.inplaceeditor-form { /* The form */
     margin-left:0px;
     margin-right:0px;
 }
-
+.zim-message-body {
+	height:200px;
+	position:relative;
+}
 .zim-message-message div{
-    white-space: pre-wrap;
+    white-space: normal;
     word-wrap: break-word;
     border-bottom:1px dashed #D4D5D6;
     width:100%;
 }
+/*END CSS FOR ZIM MESSAGE WINDOWS*/
