--- a/modules/Zim/style/Zim.css
+++ b/modules/Zim/style/Zim.css
@@ -1,249 +1,259 @@
-
 /*CSS For ZIM Block*/
 #zim-block {
-    width:100%;
-    height:100%;
-    border:1px solid #C0C0C0;
-    padding:0 2px 0 2px;
-    position:relative;
-    -moz-border-radius-topleft:5px;
-    -moz-border-radius-topright:5px;
-    border-top-left-radius:5px;
-    border-top-right-radius:5px;
-    -webkit-border-top-right-radius:5px;
-    -webkit-border-top-left-radius:5px;
-
+	width: 100%;
+	height: 100%;
+	border: 1px solid #C0C0C0;
+	padding: 0 2px 0 2px;
+	position: relative;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
 }
+
 #zim-block ul {
-    list-style-type: none;
-    width: 95%;
+	list-style-type: none;
+	width: 95%;
 }
 
 #zim-block li {
-	 margin: 1px 0;
+	margin: 1px 0;
 }
 
 #zim-block-head {
-    border-bottom:1px solid #D4D5D6;
+	border-bottom: 1px solid #D4D5D6;
 }
 
-#zim-block li:hover, #zim-message-header:hover, #zim-block-history-box li:hover, .zim-settings li:hover{
-    background-color:#CAE2FC;
-    cursor:pointer;
+#zim-block li:hover,#zim-message-header:hover,#zim-block-history-box li:hover,.zim-settings li:hover
+	{
+	background-color: #CAE2FC;
+	cursor: pointer;
 }
 
-.zim-block p, #zim-block-contacts div{
-	font-size:14px;
-	display:inline;
+.zim-block p,#zim-block-contacts div {
+	font-size: 14px;
+	display: inline;
 	vertical-align: middle;
 }
-.zim-block input{
-	width:90%;
-	margin-left:5%;
-	margin-right:auto;
-	border:1px solid #CAE2FC;
+
+.zim-block input {
+	width: 90%;
+	margin-left: 5%;
+	margin-right: auto;
+	border: 1px solid #CAE2FC;
 }
 
 .zim-settings {
-    border: 1px solid #D4D5D6;
-    background: white;
-    min-width: 250px;
-    min-height: 50px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    -moz-border-radius-topright:5px;
-    border-top-right-radius:5px;
-    -webkit-border-top-right-radius:5px;
+	border: 1px solid #D4D5D6;
+	background: white;
+	min-width: 250px;
+	min-height: 50px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	-moz-border-radius-topright: 5px;
+	border-top-right-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
 }
 
 .zim-settings li {
-	font-weight:bold;
-	padding-left:5px;
+	font-weight: bold;
+	padding-left: 5px;
 }
 
 form.inplaceeditor-form input[type="text"] { /* Input box */
-	width:50%;
-	display:inline;
-	margin:0;
+	width: 50%;
+	display: inline;
+	margin: 0;
 }
 
 form.inplaceeditor-form { /* The form */
-    display:inline;
-    padding:0;
-    vertical-align:middle; 
-    margin:0;
+	display: inline;
+	padding: 0;
+	vertical-align: middle;
+	margin: 0;
 }
-/*END CSS FOR BLOCK*/
 
-/*CSS FOR ZIM BLOCK HISTORY*/
+/*END CSS FOR BLOCK*/ /*CSS FOR ZIM BLOCK HISTORY*/
 .zim-block-history-box {
-	min-width:700px;
-	min-height:450px;
+	min-width: 700px;
+	min-height: 450px;
 	border: 1px solid #D4D5D6;
-	background:#ffffff;
-	position:absolute; top:0px; left:0px;
-	-moz-border-radius-topleft:20px;
-    -moz-border-radius-topright:20spx;
-    -moz-border-radius-bottomleft:20px;
-    -moz-border-radius-bottomright:20spx;
-    border-top-left-radius:20px;
-    border-top-right-radius:20px;
-    border-bottom-left-radius:20px;
-    border-bottom-right-radius:20px;
-    -webkit-border-top-right-radius:20px;
-    -webkit-border-top-left-radius:20px;
-    -webkit-border-bottom-right-radius:20px;
-    -webkit-border-bottom-left-radius:20px;
-    margin:0 auto;
+	background: #ffffff;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-topright: 20spx;
+	-moz-border-radius-bottomleft: 20px;
+	-moz-border-radius-bottomright: 20spx;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
+	-webkit-border-top-right-radius: 20px;
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-bottom-right-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	margin: 0 auto;
 }
+
 .zim-block-history-box-header {
-	width:100%;
-	border-bottom:1px solid #D4D5D6;
-	height:15px;
-	font-weight:bold;
-	cursor:move;
+	width: 100%;
+	border-bottom: 1px solid #D4D5D6;
+	height: 15px;
+	font-weight: bold;
+	cursor: move;
 }
 
 .zim-block-history-box-header-icons {
-	float:right;
-	margin-right:5px;
-	cursor:pointer;
+	float: right;
+	margin-right: 5px;
+	cursor: pointer;
 }
 
 #zim-block-history-contacts {
-	width:180px;
-	min-height:435px;
-	border-right:1px solid #D4D5D6;
-	float:left;
-	text-align:left;
+	width: 180px;
+	min-height: 435px;
+	border-right: 1px solid #D4D5D6;
+	float: left;
+	text-align: left;
 }
-#zim-block-history-contacts ul, #zim-settings-menu ul{
-	list-style:none;
-	width:100%;
-	margin:0;
+
+#zim-block-history-contacts ul,#zim-settings-menu ul {
+	list-style: none;
+	width: 100%;
+	margin: 0;
 }
+
 #zim-block-history-contacts li {
-	border-bottom:1px solid #D4D5D6;
-	margin:0;
-	padding-left:5px;
-	font-weight:bold;
-	cursor:pointer;
+	border-bottom: 1px solid #D4D5D6;
+	margin: 0;
+	padding-left: 5px;
+	font-weight: bold;
+	cursor: pointer;
 }
+
 #zim-block-history-contacts img {
-	float:right;
-    vertical-align:middle; 
+	float: right;
+	vertical-align: middle;
 }
 
 #zim-block-history-messages {
-	margin:0;
+	margin: 0;
 	padding: 0;
-	width:520px;
-	float:left;
-	text-align:left;
+	width: 520px;
+	float: left;
+	text-align: left;
 }
 
 .zim-block-history-messagetable {
-	width:100%;
+	width: 100%;
 }
 
 .zim-block-history-messagetable tr:hover {
-	background-color:#CAE2FC;
-}
-.zim-block-history-messagetable td{
-	padding:0 2px 0 2px;
-	border-bottom:1px solid #D4D5D6;
-	border-right:1px solid #D4D5D6;
-}
-.zim-block-history-messageheader td{
-	font-weight:bold;
+	background-color: #CAE2FC;
 }
 
-.zim-block-history-messagesetwidth{
-	max-width:100px;
+.zim-block-history-messagetable td {
+	padding: 0 2px 0 2px;
+	border-bottom: 1px solid #D4D5D6;
+	border-right: 1px solid #D4D5D6;
 }
-/*END CSS FOR ZIM BLOCK HISTORY*/
 
-/*CSS FOR ZIM MESSAGE WINDOWS*/
+.zim-block-history-messageheader td {
+	font-weight: bold;
+}
+
+.zim-block-history-messagesetwidth {
+	max-width: 100px;
+}
+
+/*END CSS FOR ZIM BLOCK HISTORY*/ /*CSS FOR ZIM MESSAGE WINDOWS*/
 #zim-block-message-container {
-    position:fixed;
-    width:100%;
-    bottom:0px;
-    right:0px;
+	position: fixed;
+	width: 100%;
+	bottom: 0px;
+	right: 0px;
 }
+
 .zim-message-contact-uname {
 	font-weight: bolder;
-	display:inline;
-}
-#zim-block-message-container li{
-    background-color:white;
-    width:225px;
-    text-align:left;
-    float:right;
-    list-style-type:none;
-    vertical-align:middle;
-    display: block;
-    padding-left: 2px;
-    margin: 0 3px 0 0;
-    border: 1px solid #D4D5D6;
-    -moz-border-radius-topleft:5px;
-    -moz-border-radius-topright:5px;
-    border-top-left-radius:5px;
-    border-top-right-radius:5px;
-    -webkit-border-top-right-radius:5px;
-    -webkit-border-top-left-radius:5px;
-    
-}
-#zim-block-message-container img, .status-img, #zim-block-contacts img{
-    vertical-align:middle; 
+	display: inline;
 }
 
-.zim-message-header{
-    border-bottom: 1px solid #D4D5D6;
+#zim-block-message-container li {
+	background-color: white;
+	width: 225px;
+	text-align: left;
+	float: right;
+	list-style-type: none;
+	vertical-align: middle;
+	display: block;
+	padding-left: 2px;
+	margin: 0 3px 0 0;
+	border: 1px solid #D4D5D6;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+}
+
+#zim-block-message-container img,.status-img,#zim-block-contacts img {
+	vertical-align: middle;
+}
+
+.zim-message-header {
+	border-bottom: 1px solid #D4D5D6;
 }
 
 .zim-message-textbox {
-    position:absolute;
-    height:50px;
-    width:90%;
-    margin-left:5%;
-    margin-right:5%;
-    border:1px solid #D4D5D6;
-    border-bottom:none;
-    bottom:0px;
+	position: absolute;
+	height: 50px;
+	width: 90%;
+	margin-left: 5%;
+	margin-right: 5%;
+	border: 1px solid #D4D5D6;
+	border-bottom: none;
+	bottom: 0px;
 }
 
-.zim-message-textbox textarea {  
-    width:96%;
-    margin-left:2%;
-    margin-right:auto;
-    padding:0;
-    height:50px;
-    border:none;
-    resize: none;
+.zim-message-textbox textarea {
+	width: 96%;
+	margin-left: 2%;
+	margin-right: auto;
+	padding: 0;
+	height: 50px;
+	border: none;
+	resize: none;
 }
-
 
 .zim-message-message {
-    position:absolute;
-    overflow-y: auto; 
-    overflow-x: hidden;
-    top:0px;
-    width:225px;
-    height:140px;
-    padding:0;
-    margin-bottom:3px;
-    margin-left:0px;
-    margin-right:0px;
+	position: absolute;
+	overflow-y: auto;
+	overflow-x: hidden;
+	top: 0px;
+	width: 225px;
+	height: 140px;
+	padding: 0;
+	margin-bottom: 3px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
+
 .zim-message-body {
-	height:200px;
-	position:relative;
+	height: 200px;
+	position: relative;
 }
-.zim-message-message div{
-    white-space: normal;
-    word-wrap: break-word;
-    border-bottom:1px dashed #D4D5D6;
-    width:100%;
+
+.zim-message-message div {
+	white-space: normal;
+	word-wrap: break-word;
+	border-bottom: 1px dashed #D4D5D6;
+	width: 100%;
 }
 /*END CSS FOR ZIM MESSAGE WINDOWS*/
