add ability for users to download history in both csv and html. closes #3

--- a/src/modules/Zim/style/Zim.css
+++ b/src/modules/Zim/style/Zim.css
@@ -246,6 +246,9 @@ form.inplaceeditor-form { /* The form */
 .zim-block-history-messagesetwidth {
     max-width: 100px;
 }
+.zim-block-history-download form{
+    display:inline;
+}
 
 /*END CSS FOR ZIM BLOCK HISTORY*/ /*CSS FOR ZIM MESSAGE WINDOWS*/
 #zim-block-message-container {
